Updated class names to avoid overlap

--- a/src/styles/taproomheader.scss
+++ b/src/styles/taproomheader.scss
@@ -1,4 +1,4 @@
-.header {
+.taproomheader {
     position: fixed;
     width: 100%;
     z-index: 1;
